package co.edu.uniquindio.proyectofinal.modelos;


import lombok.*;


@Getter
@Setter
@Builder
@ToString
public class Estadistica {

    private double ocupacionPorcentual, gananciasTotales;

}
